# python-chatbot.archetype

./: archetype.rhai  archetype.yaml
content/base/{{ project-name }}/: .gitignore  Dockerfile  README.md  pyproject.toml
content/base/{{ project-name }}/.github/workflows/: build-dev.yml
content/base/{{ project-name }}/.platform/kubernetes/base/: application.yaml
content/base/{{ project-name }}/.platform/kubernetes/dev/: application_patch.yaml  kustomization.yaml  policies.yaml
content/base/{{ project-name }}/.platform/kubernetes/prd/: application_patch.yaml
content/base/{{ project-name }}/ai_agent/: main.py
content/base/{{ project-name }}/ai_agent/api/: api.py
content/base/{{ project-name }}/ai_agent/client/: client.py
content/base/{{ project-name }}/ai_agent/core/: app.py  chunking.py  config.py  core.py  create_sidebar.py  index_data.py  parsing.py  ui.py
content/base/{{ project-name }}/ai_agent/server/: server.py
content/base/{{ project-name }}/ai_agent/utils/: configuration.py
content/base/{{ project-name }}/tests/: test_api.py  test_client.py  test_core.py  test_server.py
content/base/{{ project-name }}/tools/: README.md  update-local-cred.sh
