[tool.poetry]
name = "{{ project-prefix }}-{{ app-name }}"
version = "0.1.0"
description = "{{ project-prefix }}-{{ app-name }} Ai Agent"
authors = [
    "Rajeev Bhatia",
    "Archetect <archetect@gitbhub.io>",
]
readme = "README.md"

packages = [
    { include = "ai_agent" },
]

[tool.poetry.dependencies]
python = "^3.11"

# Common
logging = "^0.4.9"
pyyaml = "^6.0" # AWS
boto3 = "1.28.62"
awswrangler = "3.4.1"
pyarrow = "14.0.0"
python-dotenv = "1.0.1"

# Agent
streamlit = "^1.33"

# LLM
llama-index = "0.9.16"
nltk = "3.8.1"
openai = "1.1.0"
pydantic = "1.10.12"
pinecone-client = "^3.0.0"

#pytorch-lightning = "1.1.7"
transformers = "^4.42.0"

torch = [
    {version = "^2.2.0", platform = "darwin", source="PyPI"},
    {version = "^2.2.0", platform = "linux", source = "torch_cpu"}
]

#neo4j = "5.14.1"

#transformers = "4.30.2"
#networkx = "^2.6"
#joblib = "1.3.2"

# Data Science
numpy = "1.24.3"
pandas = "1.5.3"
tqdm = "4.65.0"
#scikit-learn = "1.2.2"
#matplotlib = "3.8.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.scripts]
main = "ai_agent.main:main"
docker-build = "build.docker:docker_build"
docker-run = "build.docker:docker_run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
